--- a/SimpleCloud/miniprogram/pages/databaseTest/databaseTest.wxml
+++ b/SimpleCloud/miniprogram/pages/databaseTest/databaseTest.wxml
@@ -4,3 +4,15 @@
   <button form-type="submit" id="register">注册</button>
   <button form-type="submit" id="login">登陆</button>
 </form>
+
+<!-- 添加和查询数据 -->
+<input placeholder="请输入树洞内容" bindinput="addContent"></input>
+<button bindtap="addData">添加数据</button>
+<button bindtap="getData">查询数据</button>
+<!-- 删除数据 -->
+<input placeholder="删除树洞的id" bindinput="delContent"></input>
+<button bindtap="delData">删除数据</button>
+<!-- 更新数据 -->
+<input placeholder="更新树洞的id" bindinput="updId"></input>
+<input placeholder="更新树洞的内容" bindinput="updContent"></input>
+<button bindtap="updData">更新数据</button>
