--- a/SimpleCloud/miniprogram/pages/index/index.wxml
+++ b/SimpleCloud/miniprogram/pages/index/index.wxml
@@ -35,10 +35,16 @@
   </view>
 
   <!-- 发帖 -->
-  <view class="uploader">
+  <!-- <view class="uploader">
     <navigator url="../publish/publish" open-type="navigate" class="uploader-text">
       <text>发帖</text>
     </navigator>
+  </view> -->
+
+  <view class="uploader">
+        <view class="uploader-text" bindtap="publishSelect">
+      <text>发帖</text>
+    </view>
   </view>
 
   <!-- 新建云函数 -->
