--- a/Map/app.wxss
+++ b/Map/app.wxss
@@ -14,6 +14,9 @@
 }
 
 .flex-item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   flex-grow: 1;
   text-align: center;
 }
