--- a/Map/app.wxss
+++ b/Map/app.wxss
@@ -40,7 +40,7 @@ page {
   flex-direction: column;
   justify-content: flex-start;
 }
-
+/* 
 .userinfo, .uploader, .tunnel {
   margin-top: 40rpx;
   height: 140rpx;
@@ -77,7 +77,7 @@ page {
 
 .userinfo-nickname::after {
   border: none;
-}
+} */
 
 .uploader, .tunnel {
   height: auto;
