--- a/Map/pages/publish/meet/meet.wxml
+++ b/Map/pages/publish/meet/meet.wxml
@@ -1,90 +1,52 @@
-<view class='container'>
-  <view class='mask'></view>
-  <view class="query">
-  
-  <view class="viewTitle">
-      <text class="view-Name">主题</text>
-      <view class="lineView"></view>
-  </view>
-  <view class="box1">
-      <input class="input" maxlength="10" placeholder="最大输入长度10" bindinput="titleInput" />
-  </view>
+<view class="container">
+	<view class="container-body container-gray">
+			<view class="group-header">集合位置：{{position.latitude}},{{position.longitude}}</view>
+			<view class="group-body">
+				<view class="input-list">
+					<view class="input-item">
+						<text class="input-item-label">主题</text>
+						<view class="input-item-content">
+							<input type="text" auto-focus placeholder="1~10字，想说点什么……？" bindinput="titleInput" maxlength="10"></input>
+						</view>
+					</view>
+				</view>
+			</view>
+		<view class="group">
+			<view class="group-body">
+				<textarea placeholder="整点儿内容" maxlength="1000" bindinput="contentInput"></textarea>
+			</view>
 
-  <view class="viewTitle">
-      <text class="view-Name">内容</text>
-      <view class="lineView"></view>
-  </view>
+      <view class="group-header">集合时间</view>
+      <view class="group-body">
+        <view class="input-list">
+        
+          <view class="input-item">
+            <text class="input-item-label">日期</text>
+            <view class="input-item-content">
+              <picker mode="date" value="{{date}}" start="2020-03-19" end="2099-12-31" bindchange="bindDateChange">
+                <view class="picker">
+                  {{date?date:"点击安排日期"}}
+                </view>
+              </picker>
+            </view>
+          </view>
+          <view class="input-item">
+            <text class="input-item-label">时间</text>
+            <view class="input-item-content">
+              <picker mode="time" value="{{time}}" start="00:00" end="23:59" bindchange="bindTimeChange">
+                <view class="picker">
+                  {{time?time:"点击安排时间"}}
+                </view>
+              </picker>
+            </view>
+          </view> 
 
-  <view class="box2">
-      <input class="input" placeholder="请输入内容" bindinput="contentInput"/>
-  </view>
-  
-  <view class="locationBox">
-      {{position.latitude}},{{position.longitude}}
-  </view>
-
-  <view class="section">
-    <view class="section__title"></view>
-    <picker mode="date" value="{{date}}" start="2020-03-19" end="2099-12-31" bindchange="bindDateChange">
-      <view class="picker">
-        集合日期: {{date}}
+        </view>
       </view>
-    </picker>
-  </view>
+		</view>
 
-  <view class="section">
-    <view class="section__title"></view>
-    <picker mode="time" value="{{time}}" start="00:00" end="23:59" bindchange="bindTimeChange">
-      <view class="picker">
-        集合时间: {{time}}
-      </view>
-    </picker>
-  </view>
-
-
-  <view class="button1">
-      <button bindtap="bindButtonPublish">发布</button>
-  </view>
-
-  </view>
+		<view class="btn-submit">
+			<button class="btn-block btn-orange" bindtap="bindButtonPublish">发表</button>
+		</view>
+	</view>
 </view>
-<!--
-<view class="section">
-    <input class="input" placeholder-style="font-size:15px" 
-    placeholder="自动聚焦弹出键盘，一个页面中只能有一个" auto-focus/>
-</view>
-<view class="section">
-    <input class="input" placeholder="此处只有在点击下方按钮时才聚焦" focus="{{focus}}" />
-</view>
-<view class="section1">
-    <button bindtap="bindButtonTap">使得输入框获取焦点</button>
-</view>
-<view class="section">
-    <input class="input" maxlength="10" placeholder="最大输入长度10" />
-</view>
-<view class="section__title">你输入的是：{{inputValue}}</view>
-<view class="section">
-    <input class="input" bindinput="bindKeyInput" placeholder="输入同步到view中"/>
-</view>
-<view class="section">
-    <input class="input" bindinput="bindReplaceInput" placeholder="连续的两个1会变成2" />
-</view>
-<view class="section">
-    <input class="input" bindinput="bindHideKeyboard" placeholder="输入123自动收起键盘" />
-</view>
-<view class="section">
-    <input class="input" type="number" placeholder="这是一个数字输入框" />
-</view>
-<view class="section">
-    <input class="input" password type="text" placeholder="这是一个密码输入框" />
-</view>
-<view class="section">
-    <input class="input" type="digit" placeholder="带小数点的数字键盘"/>
-</view>
-<view class="section">
-    <input class="input" type="idcard" placeholder="身份证输入键盘" />
-</view>
-<view class="section">
-    <input class="input" placeholder-style="color:red" placeholder="占位符字体是红色的" />
-</view>
--->
