我的发布、设置界面样式更新
帖子属性显示、交互和界面优化等

--- a/Map/pages/setting/setting.wxss
+++ b/Map/pages/setting/setting.wxss
@@ -14,7 +14,9 @@
 }
 
 .user {
+  display: flex;
   width: 100%;
+  align-items: center;
   background: #ffffff;
   padding: 25rpx 0;
   margin: 15rpx 0 0 0;
@@ -38,7 +40,8 @@
 }
 .user .user-info .userinfo-nickname{
   padding: 0 0 10rpx 0;
-  font-size: 35rpx;
+  font-weight: 500;
+  font-size: 36rpx;
   color: #ffc0cb;
 }
 .user .user-info .edit{
@@ -66,16 +69,31 @@
   height: 105rpx;
   background: #ffffff;
   border-bottom: 1px solid #eee;
-  padding: 0rpx 0rpx;
+  padding: 0rpx 20rpx;
+}
+
+.my .my-item .icon{
+  /* width: 70rpx;
+  height: 70rpx; */
+  /* position: relative; */
+  margin: 0 0 0 20rpx;
+  display: inline-block;
+  /* border-radius: 60rpx; */
+}
+
+.my .my-item image{
+  width: 50rpx;
+  height: 50rpx;
+  vertical-align: middle;
 }
 
 .my .my-item .myitem-name{
   flex: 5;
-  text-align: left;
+  /* text-align: left; */
   font-size: 32rpx;
   color: #6d6d6d;
   line-height: 50rpx;
-  padding: 0rpx 30rpx;
+  padding: 0rpx 20rpx;
 }
 
 .quit{
@@ -112,7 +130,7 @@
 }
 
 .remind-num{
-	border-radius: 30%;
+	border-radius: 15rpx;
 
   display: flex;
   justify-content: center;
