--- a/Map/pages/userpage/collections/collections.wxml
+++ b/Map/pages/userpage/collections/collections.wxml
@@ -11,14 +11,19 @@
         <text>{{item.user_name}}</text>
       </view>
       <view class="feed-content"> 
-        <view class="title">
-          <text>{{item.title}}</text>
+        <view class="banner">
+          <view class="post-type">
+            <text>{{item.type}}</text>
+          </view>
+          <view class="title">
+            <text>{{item.title}}</text>
+          </view>
         </view>
         <view class="content">
           <text>{{item.content}}</text>
         </view>
         <view class="actions">
-          <text>{{item.num_likes}} Likes · {{item.num_replies}} Replies · Sent {{item.createTime}} </text>
+          <text>{{item.hot}}° · {{item.num_likes}} Likes · {{item.num_replies}} Replies · {{item.createTime}} </text>
         </view>
       </view>
     </view>
