--- a/Map/pages/userpage/collections/collections.wxss
+++ b/Map/pages/userpage/collections/collections.wxss
@@ -3,7 +3,7 @@
   height: 100%;
   width: 100%;
   overflow-x:hidden;
-  background: #F0F4F3;
+  /* background: #F0F4F3; */
 }
 
 .feed-item{
@@ -59,14 +59,42 @@
 .feed-item .feed-content{
   padding: 2rpx 0 0 0;
 }
-.feed-item .feed-content .title{
-  font-size: 30rpx;
+
+.feed-item .feed-content .banner{
+  display: flex;
+  /* justify-content: space-between; */
+  flex-direction: row;
+  align-items: center;
+  margin: 0 0 5rpx 0;
+}
+
+.feed-item .feed-content .banner .title{
+  font-size: 32rpx;
   font-weight: 600;
   line-height: 35rpx;
 }
+
+.feed-item .feed-content .banner .post-type{
+  width: 72rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40rpx;
+  border-radius: 9rpx;
+  background: #ffc0cb;
+  /* background: #008cff; */
+  margin: 0 15rpx 0 0;
+  opacity: 0.95;
+}
+
+.feed-item .feed-content .banner .post-type text{
+  font-weight: 500;
+  color: #ffffff;
+}
+
 .feed-item .feed-content .content{
   padding: 10rpx 0 0 0;
-  height: 100rpx;
+  height: 95rpx;
   display: block;
   font-size: 28rpx;
   line-height: 28rpx;
