--- a/Map/pages/setting/setting.wxml
+++ b/Map/pages/setting/setting.wxml
@@ -2,8 +2,7 @@
 <view class="set-container">
   <view class="user flex-wrp" bindtap="tapUserPage">
     <view class="avatar flex-item">
-      <image wx:if="{{hasUserInfo && !userInfo.avatarUrl}}" class="userinfo-avatar" src="/resources/nouser.png" background-size="cover"></image>
-      <image wx:elif="{{hasUserInfo}}" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+      <image wx:if="{{hasUserInfo}}" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
       <image wx:else class="userinfo-avatar" src="/resources/nouser_akarin.jpg" background-size="cover"></image>
     </view>
     <view class="user-info flex-item">
@@ -13,7 +12,7 @@
     </view>
   </view>
 
-  <view wx:if="{{hasUserInfo}}">
+  <block wx:if="{{hasUserInfo}}">
 
     <view class="cells-title">
       <text class="title-text">我的</text>
@@ -25,11 +24,6 @@
         </view>
         <view class="remind-num">
           {{msgNum}}
-        </view>
-      </view>
-      <view class="my-item" bindtap="toFriends">
-        <view class="myitem-name">
-          <text>我的好友</text>
         </view>
       </view>
       <view class="my-item" bindtap="toPosts">
@@ -59,7 +53,7 @@
       </view>
     </view>
 
-    <view wx:if="{{isDev}}">
+    <block wx:if="{{isDev}}">
       <view class="cells-title">
         <text class="title-text">开发者选项</text>
       </view>
@@ -70,7 +64,7 @@
         </view>
       </view>
       </view>
-    </view>
+    </block>
 
     <view class="quit flex-item">
       <button class="quit-btn flex-item" bindtap="tapLogout">
@@ -78,6 +72,6 @@
       </button>
     </view>
 
-  </view>
+  </block>
 
 </view>
