--- a/Map/pages/show/text/text.wxml
+++ b/Map/pages/show/text/text.wxml
@@ -10,13 +10,12 @@
         <view class="content flex-sub">
           <text class="text-black text-bold text-xl">{{PostUserName}}</text>
           <view class="text-gray text-sm flex justify-between">
-            <view></view>
             <view>{{Day}} {{Time}}</view> 
           </view>
         </view>
       </view>
     </view>
-    <view class="text-content">
+    <view class="text-content text-lg" style = "word-wrap: break-word;word-break: break-all;">
       {{Content}}
     </view>
     <view class="grid flex-sub padding-lr {{isCard?'col-3 grid-square':'col-1'}}">
@@ -28,22 +27,19 @@
     <view class="text-gray text-sm text-right padding">
       <text class="cuIcon-attentionfill margin-lr-xs"></text> 10
       <text class="cuIcon-appreciatefill margin-lr-xs"></text> 20
-      <text class="cuIcon-messagefill margin-lr-xs"></text> 30
+      <text class="cuIcon-messagefill margin-lr-xs"></text> {{Comments.length}} 
     </view>
-    <view wx:for="{{Comments}}" class="cu-list menu-avatar comment solids-top">
-      <view class="cu-item">
+    <view class="cu-list menu-avatar comment solids-top">
+      <view wx:for="{{Comments}}" class="cu-item">
         <view wx:if = "{{item.userUrl}}" class="cu-avatar round" style="background-image:url({{item.userUrl}});"></view>
         <view wx:else class="cu-avatar round" style="background-image:url(/resources/nouser.png); ="></view>
         <view class="content">
-          <view class="text">{{item.userName}}</view>
-          <view class="text-gray text-content text-df">
+          <view class="text-grey">{{item.userName}}</view>
+          <view class="text-content text-df" style = "word-wrap: break-word;word-break: break-all;">
             {{item.content}}
           </view>
-          <view class="flex-sub text-center">
-            <view class="text-gray text-sm flex justify-between">
-              <view></view>
-              <view style="float: right;">{{item.createTime}}</view> 
-            </view>
+          <view class="margin-top-sm flex justify-between">
+            <view class="text-gray text-df">{{item.createTime}}</view>
           </view>
         </view>
       </view>
