--- a/Map/pages/userpage/collections/collections.wxss
+++ b/Map/pages/userpage/collections/collections.wxss
@@ -1,6 +1,6 @@
 /* pages/userpage/collections/collections.wxss */
 .post-container{
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   overflow-x:hidden;
   /* background: #F0F4F3; */
@@ -10,7 +10,7 @@
   width: 670rpx;
   height: 235rpx;
   border-radius: 15rpx;
-  padding: 20rpx 30rpx;
+  padding: 15rpx 30rpx;
   margin: 13rpx;
   background: #ffffff;
   border-top: 1px solid #eee;
@@ -47,7 +47,8 @@
   vertical-align: middle;
   margin: 0 0 0 18rpx;
   color: #ffc0cb;
-  font-size: 26rpx;
+  font-size: 28rpx;
+  font-weight: 500;
 }
 
 .feed-item .item-more{
@@ -69,25 +70,26 @@
 }
 
 .feed-item .feed-content .banner .title{
-  font-size: 32rpx;
-  font-weight: 600;
+  font-size: 30rpx;
+  font-weight: 500;
   line-height: 35rpx;
 }
 
 .feed-item .feed-content .banner .post-type{
-  width: 72rpx;
+  width: 65rpx;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 40rpx;
+  height: 36rpx;
   border-radius: 9rpx;
-  background: #ffc0cb;
-  /* background: #008cff; */
+  /* background: #ffc0cb; */
+  background: #008cff;
   margin: 0 15rpx 0 0;
-  opacity: 0.95;
+  opacity: 0.8;
 }
 
 .feed-item .feed-content .banner .post-type text{
+  font-size: 28rpx;
   font-weight: 500;
   color: #ffffff;
 }
@@ -95,6 +97,8 @@
 .feed-item .feed-content .content{
   padding: 10rpx 0 0 0;
   height: 95rpx;
+  width: 100%;
+  word-break: break-all;
   display: block;
   font-size: 28rpx;
   line-height: 28rpx;
