--- a/Map/pages/userpage/posts/posts.wxss
+++ b/Map/pages/userpage/posts/posts.wxss
@@ -75,6 +75,7 @@
 .feed-item .feed-content .content{
   padding: 10rpx 0 0 0;
   height: 95rpx;
+  width: 250rpx;
   display: block;
   font-size: 28rpx;
   line-height: 28rpx;
