--- a/Map/pages/setting/setting.wxml
+++ b/Map/pages/setting/setting.wxml
@@ -84,9 +84,7 @@
     </block>
 
     <view class="quit flex-item">
-      <button class="quit-btn flex-item" bindtap="tapLogout">
-        <text class="quit-text">退出登录</text>
-      </button>
+      <button class="cu-btn bg-red margin-tb-sm lg" bindtap="tapLogout">退出登录</button>
     </view>
 
   </block>
