--- a/Map/pages/userpage/posts/posts.wxss
+++ b/Map/pages/userpage/posts/posts.wxss
@@ -8,7 +8,7 @@
 
 .feed-item{
   width: 96.5%;
-  height: 210rpx;
+  height: 250rpx;
   border-radius: 15rpx;
   padding: 28rpx 30rpx;
   margin: 13rpx;
@@ -31,11 +31,7 @@
   color: #a0acac;
   font-size: 26rpx;
 }
-.feed-item .item-more{
-  display: inline-block;
-  width: 40rpx;
-  height: 45rpx;
-}
+
 .feed-item .feed-content{
   padding: 2rpx 0 0 0;
 }
@@ -49,6 +45,7 @@
 }
 
 .feed-item .feed-content .banner .title{
+  flex-grow: 5;
   font-size: 32rpx;
   font-weight: 600;
   line-height: 35rpx;
@@ -67,6 +64,13 @@
   opacity: 0.95;
 }
 
+.feed-item .feed-content .banner .more{
+  display: inline-block;
+  height: 40rpx;
+  width: 40rpx;
+  align-items: center;  
+}
+
 .feed-item .feed-content .banner .post-type text{
   font-weight: 500;
   color: #ffffff;
@@ -74,11 +78,10 @@
 
 .feed-item .feed-content .content{
   padding: 10rpx 0 0 0;
-  height: 95rpx;
+  height: 135rpx;
   width: 250rpx;
   display: block;
   font-size: 28rpx;
-  line-height: 28rpx;
   color: #5b5b5b;
 }
 
@@ -88,3 +91,4 @@
   color: #00aaff;
   font-size: 26rpx;
 }
+
