--- a/Map/pages/userpage/collections/collections.wxml
+++ b/Map/pages/userpage/collections/collections.wxml
@@ -2,18 +2,24 @@
 
 <scroll-view scroll-y="true" class="post-container" bindscrolltoupper="onPullUpper">
 
-  <block wx:for="{{pposts}}" wx:key="key" >
+  <block wx:for="{{pposts}}" wx:key="key">
     <view class="feed-item" id="{{item._id}}" bindtap="tapPost" data-idx="{{index}}">
       <view class="feed-user">
         <view class="avatar">
-        <image src="{{item.avatarURL}}"></image>
+          <image src="{{item.avatarURL}}"></image>
         </view>
         <view class="source">
           <view class="username">{{item.userName}}</view>
           <view class="datetime">{{item.createTime}}</view>
         </view>
+
+        <view class="more" catchtap="showOptions" data-idx="{{index}}">
+          <image src="/pages/userpage/res/more.png"></image>
+        </view>
+
       </view>
-      <view class="feed-content"> 
+
+      <view class="feed-content">
         <view class="banner">
           <view class="post-type">
             <text>{{item.type}}</text>
@@ -33,3 +39,25 @@
   </block>
 
 </scroll-view>
+
+<view class="cu-modal {{showOptions==true?'show':''}}" bindtap="hideOptions">
+  <view class="cu-dialog" catchtap>
+    <view class="cu-list menu text-left solid-top">
+      <view class="cu-item">
+        <view class="content">
+          <view class="option-item" catchtap="removeCollection">
+            <text>取消收藏</text>
+          </view>
+        </view>
+      </view>
+
+      <view class="cu-item">
+        <view class="content">
+          <view class="option-item" catchtap="showPost">
+            <text>普通地查看帖子</text>
+          </view>
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
