--- a/Map/pages/userpage/posts/posts.wxss
+++ b/Map/pages/userpage/posts/posts.wxss
@@ -52,11 +52,11 @@
 }
 
 .feed-item .feed-content .banner .post-type{
-  width: 72rpx;
+  width: 70rpx;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 45rpx;
+  height: 42rpx;
   border-radius: 9rpx;
   background: #ffc0cb;
   /* background: #008cff; */
@@ -102,4 +102,6 @@
   color: #949494;
   text-align: center;
   justify-content: center;
+  font-size: 33rpx;
+  font-weight: 500;
 }
