--- a/Map/pages/publish/meet/meet.wxml
+++ b/Map/pages/publish/meet/meet.wxml
@@ -6,14 +6,14 @@
 					<view class="input-item">
 						<text class="input-item-label">主题</text>
 						<view class="input-item-content">
-							<input type="text" auto-focus placeholder="1~10字，想说点什么……？" bindinput="titleInput" maxlength="10"></input>
+							<input type="text" auto-focus placeholder="想说点什么……？" bindinput="titleInput"></input>
 						</view>
 					</view>
 				</view>
 			</view>
 		<view class="group">
 			<view class="group-body">
-				<textarea placeholder="整点儿内容" maxlength="1000" bindinput="contentInput"></textarea>
+				<textarea placeholder="整点儿内容" bindinput="contentInput"></textarea>
 			</view>
 
       <view class="group-header">集合时间</view>
