--- a/Map/pages/publish/vote/vote.wxml
+++ b/Map/pages/publish/vote/vote.wxml
@@ -1,2 +1,55 @@
-<!--pages/publish/vote/vote.wxml-->
-<text>pages/publish/vote/vote.wxml</text>
+<view class="container">
+	<view class="container-body container-gray">
+		<view class="group-header">我的位置：{{position.latitude}},{{position.longitude}}</view>
+		<view class="group-body">
+			<view class="input-list">
+				<view class="input-item">
+					<text class="input-item-label">主题</text>
+					<view class="input-item-content">
+						<input type="text" auto-focus placeholder="想说点什么……？" bindinput="titleInput"></input>
+					</view>
+				</view>
+			</view>
+		</view>
+		<view class="group">
+			<view class="group-header">选项</view>
+			<view class="group-body">
+				<view class="input-list">
+					<view class="input-item">
+						<view class="input-item-content">
+							<input type="text" auto-focus placeholder="A" bindinput="aInput"></input>
+						</view>
+					</view>
+					<view class="input-item">
+						<view class="input-item-content">
+							<input type="text" auto-focus placeholder="B" bindinput="bInput"></input>
+						</view>
+					</view>
+					<view class="input-item">
+						<view class="input-item-content">
+							<input type="text" auto-focus placeholder="C" bindinput="cInput"></input>
+						</view>
+					</view>
+					<view class="input-item">
+						<view class="input-item-content">
+							<input type="text" auto-focus placeholder="D" bindinput="dInput"></input>
+						</view>
+					</view>
+				</view>
+			</view>
+			<view class="group-header">上传图片</view>
+			<view class="group-body">
+				<view class="img-upload">
+					<view class="img-add" bindtap="chooseImage" wx:if="{{imgPath === ''}}"></view>
+					<view class="img-item" bindlongtap="editImage">
+						<icon type="clear" size="20" color="red" style="display:{{editable ? 'block':'none'}}" bindtap="deleteImg"/>
+						<image src="{{imgPath}}" mode="aspectFill"></image>
+					</view>
+				</view>
+			</view>
+		</view>
+		<view class="btn-submit">
+			<button class="btn-block btn-orange" bindtap="bindButtonPublish">发表</button>
+		</view>
+	</view>
+</view>
