--- a/Map/pages/userpage/collections/collections.wxss
+++ b/Map/pages/userpage/collections/collections.wxss
@@ -9,7 +9,7 @@
 .feed-item{
   width: 95%;
   height: 340rpx;
-  border-radius: 12rpx;
+  border-radius: 10rpx;
   padding: 15rpx 30rpx;
   margin: 20rpx;
   background: #ffffff;
@@ -138,6 +138,11 @@
   font-size: 26rpx;
 }
 
+.hover-common{
+  opacity: 0.90;
+  background: #f7f7f7;
+}
+
 /* ------------------ CU widgets css modified ^ ^ --------------- */
 .cu-item .content .option-item{
   color: #949494;
@@ -145,4 +150,18 @@
   justify-content: center;
   font-size: 33rpx;
   font-weight: 500;
+}
+
+
+/* ------------------- cute things -------------------- */
+.empty-hint{
+  height: 600rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 45rpx; 
+  font-weight: 600;
+  color: #949494;
+  opacity: 0.7;
 }
